// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes to dark theme 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#272727",
            "flex": 1,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 4,
          }
        }
      >
        <SafeAreaView
          style={
            Array [
              Object {
                "backgroundColor": "#ffc107",
                "elevation": 4,
                "zIndex": 0,
              },
              Object {
                "shadowColor": "#000000",
                "shadowOffset": Object {
                  "height": 3,
                  "width": 0,
                },
                "shadowOpacity": 0.24,
                "shadowRadius": 4,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffc107",
                "elevation": 0,
                "flexDirection": "row",
                "height": 56,
                "marginTop": 0,
                "paddingHorizontal": 4,
              }
            }
          >
            <View
              style={
                Object {
                  "width": 48,
                }
              }
            />
            <TouchableWithoutFeedback
              disabled={true}
            >
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "paddingHorizontal": 12,
                    },
                    Array [
                      false,
                      Object {
                        "alignItems": "center",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <Text
                  accessibilityRole="header"
                  accessibilityTraits="header"
                  accessible={true}
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#ffffff",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "color": "#000000",
                          "fontFamily": "System",
                          "fontWeight": "400",
                        },
                        Object {
                          "fontSize": 17,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  common:settings
                </Text>
              </View>
            </TouchableWithoutFeedback>
            <View
              style={
                Object {
                  "width": 48,
                }
              }
            />
          </View>
        </SafeAreaView>
        <TouchableHighlight
          descriptionNumberOfLines={2}
          disabled={true}
          style={
            Array [
              false,
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "padding": 0,
                },
              ],
            ]
          }
          underlayColor="rgba(255, 255, 255, 0.16)"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 40,
                    "justifyContent": "center",
                    "margin": 8,
                    "width": 40,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                allowFontScaling={false}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontSize": 24,
                    },
                    Array [
                      Object {
                        "transform": Array [
                          Object {
                            "scaleX": 1,
                          },
                        ],
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                    ],
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰔎
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 6,
                    "paddingLeft": 8,
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 16,
                      },
                      Object {
                        "color": "rgba(255, 255, 255, 0.87)",
                      },
                      Object {
                        "fontWeight": "bold",
                      },
                    ],
                  ]
                }
              >
                useSystemTheme
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "justifyContent": "center",
                    "paddingRight": 10,
                  },
                  Object {},
                ]
              }
            >
              <Switch
                testID="system-theme-switch"
                trackColor={
                  Object {
                    "false": "",
                    "true": "#03dac6",
                  }
                }
                value={false}
              />
            </View>
          </View>
        </TouchableHighlight>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.12)",
                "height": 0.5,
              },
              undefined,
              undefined,
            ]
          }
        />
        <TouchableHighlight
          descriptionNumberOfLines={2}
          disabled={true}
          style={
            Array [
              false,
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "padding": 0,
                },
              ],
            ]
          }
          underlayColor="rgba(255, 255, 255, 0.16)"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 40,
                    "justifyContent": "center",
                    "margin": 8,
                    "width": 40,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                allowFontScaling={false}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontSize": 24,
                    },
                    Array [
                      Object {
                        "transform": Array [
                          Object {
                            "scaleX": 1,
                          },
                        ],
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                    ],
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰔎
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 6,
                    "paddingLeft": 8,
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 16,
                      },
                      Object {
                        "color": "rgba(255, 255, 255, 0.87)",
                      },
                      Object {
                        "fontWeight": "bold",
                      },
                    ],
                  ]
                }
              >
                darkTheme
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "justifyContent": "center",
                    "paddingRight": 10,
                  },
                  Object {},
                ]
              }
            >
              <Switch
                disabled={false}
                testID="dark-theme-switch"
                trackColor={
                  Object {
                    "false": "",
                    "true": "#03dac6",
                  }
                }
                value={true}
              />
            </View>
          </View>
        </TouchableHighlight>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.12)",
                "height": 0.5,
              },
              undefined,
              undefined,
            ]
          }
        />
        <TouchableHighlight
          descriptionNumberOfLines={2}
          disabled={true}
          style={
            Array [
              false,
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "padding": 0,
                },
              ],
            ]
          }
          underlayColor="rgba(255, 255, 255, 0.16)"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 40,
                    "justifyContent": "center",
                    "margin": 8,
                    "width": 40,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                allowFontScaling={false}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontSize": 24,
                    },
                    Array [
                      Object {
                        "transform": Array [
                          Object {
                            "scaleX": 1,
                          },
                        ],
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                    ],
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰉦
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 6,
                    "paddingLeft": 8,
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 16,
                      },
                      Object {
                        "color": "rgba(255, 255, 255, 0.87)",
                      },
                      Object {
                        "fontWeight": "bold",
                      },
                    ],
                  ]
                }
              >
                primaryColor
              </Text>
            </View>
            <View
              pointerEvents="box-none"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 40,
                    "justifyContent": "center",
                    "margin": 8,
                    "width": 40,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                allowFontScaling={false}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontSize": 24,
                    },
                    Array [
                      Object {
                        "transform": Array [
                          Object {
                            "scaleX": 1,
                          },
                        ],
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                    ],
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰅂
              </Text>
            </View>
          </View>
        </TouchableHighlight>
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "paddingHorizontal": 16,
                  "paddingVertical": 13,
                },
                Object {
                  "color": "rgba(255, 255, 255, 0.54)",
                  "fontFamily": "System",
                  "fontWeight": "500",
                },
                Object {},
              ],
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Array [
                  undefined,
                  Object {
                    "fontSize": 18,
                    "fontWeight": "bold",
                  },
                ],
              ]
            }
          >
            generalInfo
          </Text>
        </Text>
        <TouchableHighlight
          descriptionNumberOfLines={2}
          disabled={true}
          style={
            Array [
              false,
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "padding": 0,
                },
              ],
            ]
          }
          underlayColor="rgba(255, 255, 255, 0.16)"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 40,
                    "justifyContent": "center",
                    "margin": 8,
                    "width": 40,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                allowFontScaling={false}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontSize": 24,
                    },
                    Array [
                      Object {
                        "transform": Array [
                          Object {
                            "scaleX": 1,
                          },
                        ],
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                    ],
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰙊
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 6,
                    "paddingLeft": 8,
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 16,
                      },
                      Object {
                        "color": "rgba(255, 255, 255, 0.87)",
                      },
                      Object {
                        "fontWeight": "bold",
                      },
                    ],
                  ]
                }
              >
                author
              </Text>
              <Text
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 14,
                      },
                      Object {
                        "color": "rgba(255, 255, 255, 0.54)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Thinh Tran
              </Text>
            </View>
          </View>
        </TouchableHighlight>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.12)",
                "height": 0.5,
              },
              undefined,
              undefined,
            ]
          }
        />
        <TouchableHighlight
          descriptionNumberOfLines={2}
          disabled={true}
          style={
            Array [
              false,
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "padding": 0,
                },
              ],
            ]
          }
          underlayColor="rgba(255, 255, 255, 0.16)"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 40,
                    "justifyContent": "center",
                    "margin": 8,
                    "width": 40,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                allowFontScaling={false}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontSize": 24,
                    },
                    Array [
                      Object {
                        "transform": Array [
                          Object {
                            "scaleX": 1,
                          },
                        ],
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                    ],
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰗦
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 6,
                    "paddingLeft": 8,
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 16,
                      },
                      Object {
                        "color": "rgba(255, 255, 255, 0.87)",
                      },
                      Object {
                        "fontWeight": "bold",
                      },
                    ],
                  ]
                }
              >
                copyright
              </Text>
              <Text
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 14,
                      },
                      Object {
                        "color": "rgba(255, 255, 255, 0.54)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Copyright © 2020 by Thinh Tran
              </Text>
            </View>
          </View>
        </TouchableHighlight>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.12)",
                "height": 0.5,
              },
              undefined,
              undefined,
            ]
          }
        />
        <TouchableHighlight
          descriptionNumberOfLines={2}
          disabled={true}
          style={
            Array [
              false,
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "padding": 0,
                },
              ],
            ]
          }
          underlayColor="rgba(255, 255, 255, 0.16)"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 40,
                    "justifyContent": "center",
                    "margin": 8,
                    "width": 40,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                allowFontScaling={false}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontSize": 24,
                    },
                    Array [
                      Object {
                        "transform": Array [
                          Object {
                            "scaleX": 1,
                          },
                        ],
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                    ],
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰷺
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 6,
                    "paddingLeft": 8,
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 16,
                      },
                      Object {
                        "color": "rgba(255, 255, 255, 0.87)",
                      },
                      Object {
                        "fontWeight": "bold",
                      },
                    ],
                  ]
                }
              >
                version
              </Text>
              <Text
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 14,
                      },
                      Object {
                        "color": "rgba(255, 255, 255, 0.54)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                0.4.0.3
              </Text>
            </View>
          </View>
        </TouchableHighlight>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.12)",
                "height": 0.5,
              },
              undefined,
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "flex": 1,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 4,
          }
        }
      >
        <SafeAreaView
          style={
            Array [
              Object {
                "backgroundColor": "#ffc107",
                "elevation": 4,
                "zIndex": 0,
              },
              Object {
                "shadowColor": "#000000",
                "shadowOffset": Object {
                  "height": 3,
                  "width": 0,
                },
                "shadowOpacity": 0.24,
                "shadowRadius": 4,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffc107",
                "elevation": 0,
                "flexDirection": "row",
                "height": 56,
                "marginTop": 0,
                "paddingHorizontal": 4,
              }
            }
          >
            <View
              style={
                Object {
                  "width": 48,
                }
              }
            />
            <TouchableWithoutFeedback
              disabled={true}
            >
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "paddingHorizontal": 12,
                    },
                    Array [
                      false,
                      Object {
                        "alignItems": "center",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <Text
                  accessibilityRole="header"
                  accessibilityTraits="header"
                  accessible={true}
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "color": "#000000",
                          "fontFamily": "System",
                          "fontWeight": "400",
                        },
                        Object {
                          "fontSize": 17,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  common:settings
                </Text>
              </View>
            </TouchableWithoutFeedback>
            <View
              style={
                Object {
                  "width": 48,
                }
              }
            />
          </View>
        </SafeAreaView>
        <TouchableHighlight
          descriptionNumberOfLines={2}
          disabled={true}
          style={
            Array [
              false,
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "padding": 0,
                },
              ],
            ]
          }
          underlayColor="rgba(0, 0, 0, 0.1)"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 40,
                    "justifyContent": "center",
                    "margin": 8,
                    "width": 40,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                allowFontScaling={false}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontSize": 24,
                    },
                    Array [
                      Object {
                        "transform": Array [
                          Object {
                            "scaleX": 1,
                          },
                        ],
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                    ],
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰔎
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 6,
                    "paddingLeft": 8,
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 16,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                      },
                      Object {
                        "fontWeight": "bold",
                      },
                    ],
                  ]
                }
              >
                useSystemTheme
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "justifyContent": "center",
                    "paddingRight": 10,
                  },
                  Object {},
                ]
              }
            >
              <Switch
                testID="system-theme-switch"
                trackColor={
                  Object {
                    "false": "",
                    "true": "#03dac4",
                  }
                }
                value={true}
              />
            </View>
          </View>
        </TouchableHighlight>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.12)",
                "height": 0.5,
              },
              undefined,
              undefined,
            ]
          }
        />
        <TouchableHighlight
          descriptionNumberOfLines={2}
          disabled={true}
          style={
            Array [
              false,
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "padding": 0,
                },
              ],
            ]
          }
          underlayColor="rgba(0, 0, 0, 0.1)"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 40,
                    "justifyContent": "center",
                    "margin": 8,
                    "width": 40,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                allowFontScaling={false}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontSize": 24,
                    },
                    Array [
                      Object {
                        "transform": Array [
                          Object {
                            "scaleX": 1,
                          },
                        ],
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                    ],
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰔎
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 6,
                    "paddingLeft": 8,
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 16,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                      },
                      Object {
                        "fontWeight": "bold",
                      },
                    ],
                  ]
                }
              >
                darkTheme
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "justifyContent": "center",
                    "paddingRight": 10,
                  },
                  Object {},
                ]
              }
            >
              <Switch
                disabled={true}
                testID="dark-theme-switch"
                trackColor={
                  Object {
                    "false": "",
                    "true": "#03dac4",
                  }
                }
                value={false}
              />
            </View>
          </View>
        </TouchableHighlight>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.12)",
                "height": 0.5,
              },
              undefined,
              undefined,
            ]
          }
        />
        <TouchableHighlight
          descriptionNumberOfLines={2}
          disabled={true}
          style={
            Array [
              false,
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "padding": 0,
                },
              ],
            ]
          }
          underlayColor="rgba(0, 0, 0, 0.1)"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 40,
                    "justifyContent": "center",
                    "margin": 8,
                    "width": 40,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                allowFontScaling={false}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontSize": 24,
                    },
                    Array [
                      Object {
                        "transform": Array [
                          Object {
                            "scaleX": 1,
                          },
                        ],
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                    ],
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰉦
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 6,
                    "paddingLeft": 8,
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 16,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                      },
                      Object {
                        "fontWeight": "bold",
                      },
                    ],
                  ]
                }
              >
                primaryColor
              </Text>
            </View>
            <View
              pointerEvents="box-none"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 40,
                    "justifyContent": "center",
                    "margin": 8,
                    "width": 40,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                allowFontScaling={false}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontSize": 24,
                    },
                    Array [
                      Object {
                        "transform": Array [
                          Object {
                            "scaleX": 1,
                          },
                        ],
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                    ],
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰅂
              </Text>
            </View>
          </View>
        </TouchableHighlight>
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "paddingHorizontal": 16,
                  "paddingVertical": 13,
                },
                Object {
                  "color": "rgba(0, 0, 0, 0.54)",
                  "fontFamily": "System",
                  "fontWeight": "500",
                },
                Object {},
              ],
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Array [
                  undefined,
                  Object {
                    "fontSize": 18,
                    "fontWeight": "bold",
                  },
                ],
              ]
            }
          >
            generalInfo
          </Text>
        </Text>
        <TouchableHighlight
          descriptionNumberOfLines={2}
          disabled={true}
          style={
            Array [
              false,
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "padding": 0,
                },
              ],
            ]
          }
          underlayColor="rgba(0, 0, 0, 0.1)"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 40,
                    "justifyContent": "center",
                    "margin": 8,
                    "width": 40,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                allowFontScaling={false}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontSize": 24,
                    },
                    Array [
                      Object {
                        "transform": Array [
                          Object {
                            "scaleX": 1,
                          },
                        ],
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                    ],
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰙊
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 6,
                    "paddingLeft": 8,
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 16,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                      },
                      Object {
                        "fontWeight": "bold",
                      },
                    ],
                  ]
                }
              >
                author
              </Text>
              <Text
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 14,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Thinh Tran
              </Text>
            </View>
          </View>
        </TouchableHighlight>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.12)",
                "height": 0.5,
              },
              undefined,
              undefined,
            ]
          }
        />
        <TouchableHighlight
          descriptionNumberOfLines={2}
          disabled={true}
          style={
            Array [
              false,
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "padding": 0,
                },
              ],
            ]
          }
          underlayColor="rgba(0, 0, 0, 0.1)"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 40,
                    "justifyContent": "center",
                    "margin": 8,
                    "width": 40,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                allowFontScaling={false}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontSize": 24,
                    },
                    Array [
                      Object {
                        "transform": Array [
                          Object {
                            "scaleX": 1,
                          },
                        ],
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                    ],
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰗦
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 6,
                    "paddingLeft": 8,
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 16,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                      },
                      Object {
                        "fontWeight": "bold",
                      },
                    ],
                  ]
                }
              >
                copyright
              </Text>
              <Text
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 14,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Copyright © 2020 by Thinh Tran
              </Text>
            </View>
          </View>
        </TouchableHighlight>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.12)",
                "height": 0.5,
              },
              undefined,
              undefined,
            ]
          }
        />
        <TouchableHighlight
          descriptionNumberOfLines={2}
          disabled={true}
          style={
            Array [
              false,
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "padding": 0,
                },
              ],
            ]
          }
          underlayColor="rgba(0, 0, 0, 0.1)"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 40,
                    "justifyContent": "center",
                    "margin": 8,
                    "width": 40,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                allowFontScaling={false}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontSize": 24,
                    },
                    Array [
                      Object {
                        "transform": Array [
                          Object {
                            "scaleX": 1,
                          },
                        ],
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                    ],
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰷺
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 6,
                    "paddingLeft": 8,
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 16,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                      },
                      Object {
                        "fontWeight": "bold",
                      },
                    ],
                  ]
                }
              >
                version
              </Text>
              <Text
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 14,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                0.4.0.3
              </Text>
            </View>
          </View>
        </TouchableHighlight>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.12)",
                "height": 0.5,
              },
              undefined,
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;
